# AI-Formula-Scanner

./: .gitignore  LICENSE  README-CN.md  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js  vitest-setup.ts  vitest.config.ts
scripts/: rename-msi.ps1
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: capture.rs  data_models.rs  fs_manager.rs  llm_api.rs  main.rs  prompts.rs
src/__mocks__/: tauri.ts
src/__mocks__/app/: navigation.ts  stores.ts
src/components/: FavoritesView.svelte  FormulaRenderer.svelte  HistoryView.svelte  LatexEditor.svelte  LatexTextRenderer.svelte  RecognitionView.svelte  SettingsView.svelte  Sidebar.svelte  Toast.svelte  VerificationReportRenderer.svelte
src/lib/: historyStore.ts  i18n.ts  mathEngine.ts  recognitionStore.ts  toast.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/favorites/: +page.svelte
src/routes/history/: +page.svelte
src/routes/overlay/: +layout.svelte  +page.svelte
src/routes/settings/: +page.svelte
src/routes/test-latex/: +page.svelte
tests/components/: FavoritesView.test.ts  FormulaRenderer.test.ts  HistoryView.test.ts  LatexEditor.test.ts  LatexTextRenderer.test.ts  RecognitionView.test.ts  SettingsView.test.ts  Sidebar.test.ts
